--- a/views/pages/forgotpassword.ejs
+++ b/views/pages/forgotpassword.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Login</title>
+<title>Quên mật khẩu</title>
 <link rel="icon" href="https://f0.pngfuel.com/png/982/55/white-laptop-icon-png-clip-art.png">
 <link href="css/pages/account.css" rel='stylesheet' type='text/css' media="all" />
 <body>
