--- a/views/partials/home.ejs
+++ b/views/partials/home.ejs
@@ -1,3 +1,4 @@
+<title>Internet Banking</title>
 <%- include ('templateheader.ejs') -%>
 <%- include ('templateleft.ejs') -%>
 <%- include ('templateright.ejs') -%>
