--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -1,3 +1,4 @@
+<title>Thông tin cá nhân</title>
 <link rel="stylesheet" href="css/imgcmn.css">
 <script src=""></script>
 <%- include ('templateheader.ejs') -%>
