--- a/views/manage/templateleft.ejs
+++ b/views/manage/templateleft.ejs
@@ -14,33 +14,58 @@
       <div class="col-12 collapse show d-md-flex pt-2 pl-0 min-vh-100" id="sidebar">
         <ul class="nav flex-column flex-nowrap overflow-hidden">
           <li class="nav-item">
-            <a class="nav-link collapsed text-truncate" href="#submenu1" data-toggle="collapse"
-              data-target="#submenu1"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Quản lí tài khoản
-                ▾</span></a>
-            <div class="collapse" id="submenu1" aria-expanded="false">
-              <ul class="flex-column pl-2 nav">
-                <li class="nav-item" style="margin-left: 30px; "><a class="nav-link py-0" href="/adminAccount"><span>Tài
-                      Khoản Nhân Viên</span></a></li>
-                <li class="nav-item">
-                  <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="/confirmCMND"><span>Cá Nhân</span></a>
-                </li>
-              </ul>
-            </div>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link text-truncate" href="fee"><span class="d-none d-sm-inline">Chi Phí Chuyển
-                Khoản</span></a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link text-truncate" href="guestAccount"><span class="d-none d-sm-inline">Tài Khoản Khách Hàng</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-truncate" href="historyRecharge"><span class="d-none d-sm-inline">Lịch Sử Nạp Tiền</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-truncate" href="recharge"><span class="d-none d-sm-inline">Nạp Tiền Tài Khoản</span></a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link collapsed text-truncate" href="#submenu1" data-toggle="collapse"
+              data-target="#submenu1"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Quản Lí Tài Khoản
+                ▾</span></a>
+            <div class="collapse" id="submenu1" aria-expanded="false" style="margin-left: 30px;">
+              <ul class="flex-column pl-2 nav">
+                <li class="nav-item">
+                  <a class="nav-link collapsed text-truncate" href="#submenu3" data-toggle="collapse"
+                    data-target="#submenu3"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Tài
+                      Khoản Nhân Viên
+                      ▾</span></a>
+                  <div class="collapse" id="submenu3" aria-expanded="false">
+                    <ul class="flex-column pl-2 nav">
+                      <li class="nav-item" style="margin-left: 30px; "><a class="nav-link py-0" href="/adminAccount"><span>Tài
+                            Khoản Nhân Viên</span></a></li>
+                      <li class="nav-item">
+                        <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="/changepassword"><span>Đổi mật khẩu</span></a>
+                      </li>
+                    </ul>
+                  </div>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link py-0" style="margin-top: 8px;" href="/confirmCMND"><span>Thông tin khách hàng</span></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link collapsed text-truncate" href="#submenu2" data-toggle="collapse"
+              data-target="#submenu2"><i class="fa fa-table"></i> <span class="d-none d-sm-inline">Chi Phí ▾</span></a>
+            <div class="collapse" id="submenu2" aria-expanded="false">
+              <ul class="flex-column pl-2 nav">
+                <li class="nav-item" style="margin-left: 30px; "><a class="nav-link py-0" href="/fee"><span>Chi phí chuyển khoản</span></a></li>
+                <li class="nav-item">
+                  <a class="nav-link py-0" style="margin-top: 8px; margin-left: 30px;" href="/interests"><span>Phí tài khoản tiết kiệm</span></a>
+                </li>
+              </ul>
+            </div>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link text-truncate" href="historyRecharge"><span class="d-none d-sm-inline">Lịch Sử Nạp Tiền</span></a>
+          </li>
+          </li>
+          
+          
+          
         </ul>
       </div>
 
