--- a/views/warning.ejs
+++ b/views/warning.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cảnh báo</title>
 </head>
 <body>
     <p>Tài khoản của bạn đã bị <b>BLOCK</b></p>
