--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -33,7 +33,7 @@
             <% if(currentUser.CMND && currentUser.codeCMND == "0"){ %>
             <div>
               <h5 for="">CMND:
-                <input style="margin-top: 10px;" type="text" name="CMND" id="CMND" value="<%= currentUser.CMND %>" disabled></h5>
+                <input style="margin-top: 10px;" class="form-control"  type="text" name="CMND" id="CMND" value="<%= currentUser.CMND %>" disabled></h5>
             </div>
             <% }else { %>
               <% if(currentUser.CMND && currentUser.pictureCMND && currentUser.codeCMND == "1" ){ %>
