--- a/views/partials/changepassword.ejs
+++ b/views/partials/changepassword.ejs
@@ -1,44 +1,195 @@
-<title>Đổi mật khẩu</title>
-<%- include ('templateheader.ejs') -%>
-<%- include ('templateleft.ejs') -%>
-<br />
-
-<%- include ('templateright.ejs') -%>
-<br />
-<div>
-    <h1 style="text-align: center;">Thay Đổi Mật Khẩu</h1>
-    <br />
-    <hr />
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link rel="stylesheet" type="text/css" href="css/home.css">
+<!------ Include the above in your HEAD tag ---------->
 
 
-<div>
-    <div>
-        <div class="container">
-            <form method="POST" action="">
-                <div style="margin-left:11vw;margin-right:11vw;">
-                <div class="form-group">
-                    <h5>Mật Khẩu Cũ</h5>
-                    <input name="passwordOld" class="form-control" type="password" placeholder="Mật khẩu Cũ" />
-                </div>
-                <div class="form-group">
-                    <h5>Mật Khẩu Mới </h5>
-                    <input name="passwordNew1" class="form-control" id="passwordNew1" type="password"
-                        placeholder=" Mật khẩu Mới" />
-                </div>
-                <div class="form-group">
-                    <h5>Xác Nhận Mật Khẩu Mới</h5>
-                    <input name="passwordNew2" class="form-control" id="passwordNew2" type="password"
-                        placeholder=" Mật khẩu Mới" />
-                    <div class="form-group">
+	<title>Đổi mật khẩu</title>
+   <!--Made with love by Mutiullah Samim -->
+   
+	<!--Bootsrap 4 CDN-->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    
+    <!--Fontawesome CDN-->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-                    </div>
-                    <hr>
-                    <button  style="margin-left:17vw;margin-right:11vw;" type="submit" class="btn btn-primary mb-2">Đổi Mật Khẩu</button>
-                    </hr>
-                </div>
-            </form>
+	<!--Custom styles-->
+	<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 4vw" >
+        <a class="navbar-brand" style=" font-family: Blippo, fantasy;color:  #000000;margin-left:4vw ;font-size: 20px; font-weight: normal;" href="/home">Internet Banking </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+      
+      <div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <div style="margin-left: 4vw;">
+                <h5 class="nav-item active" >
+                    <a class="nav-link" href="/home">Trang Chủ <span class="sr-only">(current)</span></a>
+                </h5>
+            </div>
+            
+                <div style="margin-left:3vw;">
+                <h5>
+                    <% if(currentUser) {  %><a href="/logout" class="nav-link">Đăng xuất</a>
+                    <% } else { %><a href="/login" class="item -link">Login</a> <% } %>
+                </h5>
+            </ul>
+        
         </div>
     </div>
+    </nav>
+    <div style="float: left;">
+        <div style=" margin-left: 3vw">
+            <img src="../images/logo.png"
+              style="width: 100px; height: 80px; margin: auto; padding-top: 10px; margin-bottom: 10px; display: block;">
+            <h1 style="font-family: Blippo, fantasy;color:  #AF1E40;font-size: 50px; font-weight: normal; text-align: center;">ShibaBank</h1>
+            <p style="text-align: center;color:brown; font-size: 14px; text-shadow: rgb(51, 2, 2) -1px -2px 0.5em;" >(Dịch vụ Internet Banking)</p>
+            
+            <hr />
+          </div>
+          
+          <p style="margin: 0; margin-left: 1vw; text-align: center; width: 45vw; color: rgb(43, 2, 2); font-size: 14px; ">
+            Là ngân hàng đa năng với thế mạnh cả về bán buôn, bán lẻ và dịch vụ đầu tư, đi đầu trong áp dụng các chuẩn mực
+            quốc tế tốt nhất, ShibaBank luôn sẵn sàng cung cấp cho khách hàng các dịch vụ tài chính, ngân hàng hiện đại
+            với chất lượng tốt nhất. Mục tiêu chiến lược của ShibaBank đến năm 2025 và tầm nhìn đến năm 2030 là củng cố
+            vững chắc vị trí số 1 tại Việt Nam, đứng trong 100 ngân hàng lớn nhất khu vực Châu Á, một trong 300 tập đoàn tài
+            chính ngân hàng lớn nhất thế giới, một trong 1000 doanh nghiệp niêm yết lớn nhất toàn cầu, đóng góp tích cực vào
+            sự phát triển của Việt Nam.</p>
+    </div>
+<div class="container">
+	<div class="d-flex justify-content-center h-100">
+		<div class="card">
+			<div class="card-header">
+				<h3 style="margin-top: 1vw">Thay Đổi Mật Khẩu</h3>
+			</div>
+			<div class="card-body">
+				<form method="POST" action="">
+                    <div >
+                    <div class="form-group">
+                        <h5>Mật Khẩu Cũ</h5>
+                        <input name="passwordOld" class="form-control" type="password" placeholder="Mật khẩu Cũ" />
+                    </div>
+                    <div class="form-group">
+                        <h5>Mật Khẩu Mới </h5>
+                        <input name="passwordNew1" class="form-control" id="passwordNew1" type="password"
+                            placeholder=" Mật khẩu Mới" />
+                    </div>
+                    <div class="form-group">
+                        <h5>Xác Nhận Mật Khẩu Mới</h5>
+                        <input name="passwordNew2" class="form-control" id="passwordNew2" type="password"
+                            placeholder=" Mật khẩu Mới" />
+                        <div class="form-group">
+    
+                        </div>
+                        <hr>
+                        <button  style="margin: auto; float: right;" type="submit" class="btn btn-primary mb-2">Đổi Mật Khẩu</button>
+                        </hr>
+                    </div>
+                </form>
+			</div>
+		</div>
+	</div>
 </div>
-<%- include ('templatefooter.ejs') -%>
+</body>
+</html>
+
+<style>
+    /* Made with love by Mutiullah Samim*/
+
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+html,body{
+background-image: linear-gradient(to bottom right, rgb(66, 1, 1), rgb(253, 253, 253));
+font-family: 'Numans', sans-serif;
+}
+
+.container{
+height: 100%;
+align-content: center;
+}
+
+.card{
+height: 450px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.social_icon span{
+font-size: 60px;
+margin-left: 10px;
+color: #FFC312;
+}
+
+.social_icon span:hover{
+color: white;
+cursor: pointer;
+}
+
+.card-header h3{
+color: white;
+}
+
+.social_icon{
+position: absolute;
+right: 20px;
+top: -45px;
+}
+
+.input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+.remember{
+color: white;
+}
+
+.remember input
+{
+width: 20px;
+height: 20px;
+margin-left: 15px;
+margin-right: 5px;
+}
+
+.login_btn{
+color: black;
+background-color: #FFC312;
+width: 100px;
+}
+
+.login_btn:hover{
+color: black;
+background-color: white;
+}
+
+.links{
+color: white;
+}
+
+.links a{
+margin-left: 4px;
+}
+h5{
+    color:aliceblue;
+}
+</style>
