--- a/views/manage/adminAccount.ejs
+++ b/views/manage/adminAccount.ejs
@@ -15,9 +15,9 @@
   </br>
   <div>
       <form action="" method="post">
-          <input type="text" name="displayName" placeholder="Tên Đăng Nhập"  class= "form-control actt">
+          <input type="text" name="displayName" placeholder="Tên Nhân Viên"  class= "form-control actt">
           <br>
-          <input type="text" name="username" placeholder="Tên Nhân Viên" class= "form-control actt">
+          <input type="text" name="username" placeholder="Tên Đăng Nhập" class= "form-control actt">
           <br>
           <input type="password" name="password" placeholder="Mật khẩu" class= "form-control actt">
       <br>
