--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -15,7 +15,7 @@
 <div>
   <div>
     <div class="container">
-      <form method="POST" action="" enctype="multipart/form-data" >
+      <form method="POST" action=""  >
         <div style="margin-left:20vw;margin-right:20vw;">
         <div class="form-group">
           <div>
@@ -61,7 +61,7 @@
             <% } %>
 
           </div>
-          <button style="margin-left:10vw;max-resolution: right 10px; justify-content: center;" type="submit" id = "submit" class="btn btn-primary mb-2">Cập Nhật</button>
+          <button style="margin-left:10vw; justify-content: center;" type="submit" id = "submit" class="btn btn-primary mb-2">Cập Nhật</button>
           </hr>
         </div>
 
